--- a/matplotlib-turkce-dokümentasyon.ipynb
+++ b/matplotlib-turkce-dokümentasyon.ipynb
@@ -7,7 +7,8 @@
     "\n",
     "# **Matplotlib Eğitim Yol Haritamız:**\n",
     "\n",
-    "1. **Matplotlib Nedir ve Neden Kullanılır?**\n",
+    "1. **Matplotlib Nedir ve Neden Kullanılır?** \n",
+    "\n",
     "   - Matplotlib'in temel tanımı ve önemi\n",
     "   - Veri görselleştirmenin önemi ve Matplotlib'in rolü\n",
     "\n",
@@ -62,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1) **Matplotlib Nedir ve Neden Kullanılır?**\n",
+    "## 1) Matplotlib Nedir ve Neden Kullanılır?\n",
     "\n",
     "Matplotlib, Python programlama dilinde güçlü ve esnek veri görselleştirme araçları sağlayan bir kütüphanedir. Bilimsel ve mühendislik uygulamalarından, veri analizine, web uygulamalarından eğitim materyallerine kadar geniş bir kullanım alanına sahiptir. İşte Matplotlib'in ana özellikleri ve neden kullanılması gerektiği hakkında birkaç önemli nokta:\n",
     "\n",
